# LeCopain

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
lecopain/: control_guess_who.py  fix_dataset.py  push_to_hub.py
lecopain/backend/lerobot/lerobot/common/robot_devices/robots/: configs.py
lecopain/backend/src/: main.py
lecopain/backend/src/core/: config.py
lecopain/backend/src/features/guess_who/: control_2.py  control_atomic.py  grid_call.py  schema.py  services.py
lecopain/front/src/: App.tsx
lecopain/front/src/services/: apiService.ts
lecopain/front/src/types/: api.ts
lecopain/guess_who/backend/src/: main.py
lecopain/guess_who/backend/src/features/guess_who/: control_atomic.py  router.py
lecopain/guess_who/front/: package-lock.json
lecopain/guess_who/front/src/hooks/: useRealtimeTranscription.ts
