[project]
name = "lerobot_jds"
version = "0.1.0"
description = "Lerobot JDS integration"
authors = [
    { name = "Arthur Haffemayer", email = "arthur.haffemayer@laas.fr" },
    { name = "Alexandre Chapin", email = "alexandre.chapin@ec-lyon.fr" },
    { name = "Thomas Gossin", email = "alexandre.chapin@ec-lyon.fr" },
    { name = "Thomas Gossard", email = "alexandre.chapin@ec-lyon.fr" },
    { name = "Paul Chu", email = "alexandre.chapin@ec-lyon.fr" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
"lerobot @ file:./lerobot"
    ]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
